[package]
name = "wp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["haruki7049 <tontonkirikiri@gmail.com>"]
description = "A cli client for web-phone system."
readme = "README.md"
homepage = "https://github.com/web-phone/wp"
repository = "https://github.com/web-phone/wp"
keywords = ["SNS", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
